--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="scores"><a href="highscores.html">View Highscores</a></div>
 
-    <div class="timer">Time: <span id="time">70</span></div>
+    <div class="timer">Time: <span id="time">60</span></div>
     <div class="wrapper">
         <div id="start-screen" >
             <H1>Code Quiz</H1>
@@ -27,6 +27,7 @@
          <div id="questions" class="hide">
              <h2 id="question-title"></h2>
              <div id="choices" class="choices"></div>
+             <div id="answer" class="answer"></div>
          </div>  
          
          <div id="end-screen" class="hide">
