--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
          <div id="questions" class="hide">
              <h2 id="question-title"></h2>
-             <div id="choices" class="choices"></div>
-             <div id="answer" class="answer"></div>
+             <div id="choices" class="choices" ></div>
+             <!-- <div id="answer"></div> -->
          </div>  
          
          <div id="end-screen" class="hide">
